<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/boder"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/boder">

        <TextView
            android:id="@+id/tv_recycler_item4_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/chengdong"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/tv_recycler_item4_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:text="123"
            android:textColor="#000000"
            android:layout_toLeftOf="@+id/bt_recycler_item4_name"/>
        <Button
            android:id="@+id/bt_recycler_item4_name"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_recyclerview_item4"
        android:background="@drawable/boder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/tv_recycler_item4_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/wanzhenglv"/>
        <TextView
            android:id="@+id/tv_recycler_item4_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/zaixianlv_one"/>
        <TextView
            android:id="@+id/tv_recycler_item4_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="#000000"
            android:text="@string/zaixianlv_two"/>

    </LinearLayout>
</LinearLayout>
