<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/rl_tilte"
    android:layout_alignParentTop="true"
    >
    <Button
        android:id="@+id/bt_back"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="返回"
        android:layout_marginLeft="12dp"/>
    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:text="标题"
        android:textColor="#ffffff"
        android:gravity="center"
        android:layout_centerInParent="true"/>
    <com.tablaoutviewpagerdemo.a1111.demoxiebo.ui.CircleImageView.CircleImageView
        android:id="@+id/civ"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:background="@mipmap/ic_launcher_round"
        android:layout_centerVertical="true"/>

</RelativeLayout>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_buttom"
        android:layout_below="@+id/rl_tilte"
        android:visibility="visible">

    </FrameLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/colorPrimaryDark"
        android:layout_alignTop="@+id/ll_buttom"/>
    <LinearLayout
        android:id="@+id/ll_buttom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#F5F5F5"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_item1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zhibiaogailan"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_item2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/jiancedianzonglan"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_item3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/wentaigaojing"
            android:gravity="center"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/tv_item4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/zantaigaojing"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
</RelativeLayout>
