<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="#DCDCDC"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/gongdiandanwei"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_recyc_item3_gongdiandanwei"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="123"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/dianzhanmingcheng"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/tv_recyc_item3_dianzhanmingcheng"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="123"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/jiancedian"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tv_recyc_item3_jiancedian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="123"
                android:textColor="#000000" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/zhibiaoleixing"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/tv_recyc_item3_zhibiaoleixing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="123"
                android:textColor="#000000" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="2"
                android:text="@string/fashengshijian"
                android:textColor="#000000" />
            <TextView
                android:id="@+id/tv_recyc_item3_fashengshijian"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:text="123"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />
    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="@string/guojizhi" />
            <TextView
                android:id="@+id/tv_recyc_item3_guojizhi"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="123" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="@string/shijizhi" />
            <TextView
                android:id="@+id/tv_recyc_item3_shijizhi"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="123" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="@string/yuechuzhi" />

            <TextView
                android:id="@+id/tv_recyc_item3_yuechuzhi"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:layout_gravity="center"
                android:text="123" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#000000" />
    <TextView
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="10dp" />
</LinearLayout>
